-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 8, 9, 10
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8187396 | 8u172 | Arunprasad Rajkumar | P4 | Resolved | Fixed | b01 |
| JDK-8193770 | 8u171 | Arunprasad Rajkumar | P4 | Resolved | Fixed | b01 |
Some of the extension to MIME mapping is missing in our Java Port.
e.g. .xht should be mapped to application/xhtml+xml
e.g. .xht should be mapped to application/xhtml+xml
- backported by
-
JDK-8187396 Few extension to MIME type mappings are missing
-
- Resolved
-
-
JDK-8193770 Few extension to MIME type mappings are missing
-
- Resolved
-