8186148: Few extension to MIME type mappings are missing

Reviewed-by: ghb, mbilla, kcr