modules/javafx.web/src/main/native/Source/WebCore/platform/java/MIMETypeRegistryJava.cpp
@@ -18,6 +18,7 @@ struct ExtensionMap {
 static const ExtensionMap extensionMap [] = {
     { "bmp", "image/bmp" },
     { "css", "text/css" },
+    { "cur", "image/x-icon" },
     { "gif", "image/gif" },
     { "html", "text/html" },
     { "htm", "text/html" },
@@ -25,39 +26,33 @@ static const ExtensionMap extensionMap [] = {
     { "jpeg", "image/jpeg" },
     { "jpg", "image/jpeg" },
     { "js", "application/x-javascript" },
+    { "mp3", "audio/mpeg"},
     { "pdf", "application/pdf" },
     { "png", "image/png" },
     { "rss", "application/rss+xml" },
     { "svg", "image/svg+xml" },
+    { "svgz", "image/svg+xml" },
     { "swf", "application/x-shockwave-flash" },
     { "text", "text/plain" },
+    { "tif", "image/tiff" },
+    { "tiff", "image/tiff" },
     { "txt", "text/plain" },
     { "xbm", "image/x-xbitmap" },
     { "xml", "text/xml" },
     { "xsl", "text/xsl" },
+    { "xht", "application/xhtml+xml" },
     { "xhtml", "application/xhtml+xml" },
     { "wml", "text/vnd.wap.wml" },
     { "wmlc", "application/vnd.wap.wmlc" },
 };
 
-String MIMETypeRegistry::getMIMETypeForExtension(const String &ext)
+String MIMETypeRegistry::getMIMETypeForExtension(const String& extension)
 {
-    JNIEnv* env = WebCore_GetJavaEnv();
-    ASSERT(env);
-
-    static JGClass cls(env->FindClass("com/sun/webkit/Utilities"));
-    ASSERT(cls);
-
-    static jmethodID mid = env->GetStaticMethodID(cls,
-        "fwkGetMIMETypeForExtension",
-        "(Ljava/lang/String;)Ljava/lang/String;");
-    ASSERT(mid);
-
-    JLString type(static_cast<jstring>(env->CallStaticObjectMethod(cls, mid,
-        (jstring)ext.toJavaString(env))));
-    CheckAndClearException(env);
-
-    return String(env, type);
+    for (auto& entry : extensionMap) {
+        if (equalIgnoringASCIICase(extension, entry.extension))
+            return entry.mimeType;
+    }
+    return String();
 }
 
 bool MIMETypeRegistry::isApplicationPluginMIMEType(const String&)
